--- a/photos.css
+++ b/photos.css
@@ -14,6 +14,9 @@ h2 {
     text-decoration: underline;
     margin-bottom: 60px;
 }
+a {
+  color: #000;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -29,7 +32,7 @@ img {
     margin-right: 70px;
 }
 img:hover {
-    cursor: zoom-in;
+    cursor: pointer;
 }
 h1 {
     font-size: 17px;
@@ -38,7 +41,9 @@ h1 {
     align-items: center;
     justify-content: center;
     text-decoration: underline;
+    color: #000;
 }
+
 @media (min-width: 480px) {
     body {
         margin-left: 100px;
